--- a/broker/src/test/resources/log4j.properties
+++ b/broker/src/test/resources/log4j.properties
@@ -1,7 +1,7 @@
-log4j.rootLogger=ERROR, stdout, file
+log4j.rootLogger=TRACE, stdout, file
 
-log4j.logger.io.moquette=DEBUG
-log4j.logger.io.moquette.broker=DEBUG
+log4j.logger.io.moquette=TRACE
+log4j.logger.io.moquette.broker=TRACE
 #log4j.logger.io.moquette.broker=WARN
 
 #Storage service
@@ -11,7 +11,7 @@ log4j.logger.io.moquette.spi.persistence.MapDBSessionsStore=WARN
 
 # stdout appender is set to be consoleAppender.
 log4j.appender.stdout=org.apache.log4j.ConsoleAppender
-log4j.appender.stdout.Threshold=DEBUG
+log4j.appender.stdout.Threshold=TRACE
 
 # for debug trace
 log4j.appender.stdout.layout=org.apache.log4j.PatternLayout
@@ -40,4 +40,4 @@ log4j.appender.messagelog.MaxBackupIndex=1
 log4j.appender.messagelog.layout=org.apache.log4j.PatternLayout
 log4j.appender.messagelog.layout.ConversionPattern=%d{HH:mm:ss,SSS} [%t] %-5p %c{1} %L %x - %m%n
 
-log4j.category.io.moquette.broker.metrics.MQTTMessageLogger=WARN, messagelog
+log4j.category.io.moquette.broker.metrics.MQTTMessageLogger=TRACE, messagelog
